--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@baitasolucoes-ui/eslint-config",
   "license": "MIT",
+  "version": "1.0.0",
   "private": true,
   "main": "index.js",
   "devDependencies": {
